--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 
 </head>
 
-<body class="img_fundo">
+<body class="fundo">
     <div class="escurecer">
-        <img class="foto_de_perfil" src="img/foto.jpg">
-            <div class="info">
+        <div class="container">
+            <img class="foto_de_perfil" src="img/foto.jpg">
                 <p class="nome">Fábio Filho</p>
                 <p class="descricao">Professor - Dev</p>
+        </div>
+    
                     <div class="conjunto_botoes">
                         <a class="botao_redirecionador" href="https://fabinhofarias.github.io/Aulas/" target="_blank">Matemática</a>
                         <a class="botao_redirecionador" href="https://github.com/LordFabinho" target="_blank">Git Hub</a>
                         <a class="botao_redirecionador" href="https://www.instagram.com/fabinhofariass/" target="_blank">Instagram</a>
                         <a class="botao_redirecionador" href="https://www.instagram.com/donruancursos/" target="_blank">Don Ruan</a>
                     </div>
-            </div>
+        </div>
     </div>
 </body>
 
