--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/logo.png" id="Logo">
         <nav class="menu">
             <ul>
-                <li><a href="https://www.instagram.com/fabinhofariass/" target="_blank"><img src="img/Logo_Instagram.png" id="Logo_Instagram" alt="Instagram Logo" ></a></li>
+                <li><a href="https://www.instagram.com/fabinhofariass/" target="_blank"><img src="img/Logo_Instagram.png" id="Logo_Instagram"></a></li>
             </ul>
         </nav>
     </header>
@@ -24,7 +24,7 @@
     <div class="escurecer">
         
         <div class="foto_de_fundo">
-            <p id="OlaMundo" class="space-mono-regular">Olá, Mundo !!</p>
+            <p id="OlaMundo" class="space-mono-regular">Olá, Mundo!!</p>
         </div>
 
         <div class="container">
