--- a/index.html
+++ b/index.html
@@ -33,13 +33,23 @@
                 <p class="descricao">Professor - Dev</p>
         </div>
     
-                    <div class="conjunto_botoes">
-                        <a class="botao_redirecionador space-mono-regular" href="https://fabinhofarias.github.io/Aulas/" target="_blank">Matemática</a>
-                        <a class="botao_redirecionador space-mono-regular" href="https://github.com/LordFabinho" target="_blank">Git Hub</a>
-                        <a class="botao_redirecionador space-mono-regular" href="https://www.instagram.com/donruancursos/" target="_blank">Don Ruan</a>
-                    </div>
+        <div class="conjunto_botoes">
+            <a class="botao_redirecionador space-mono-regular" href="https://fabinhofarias.github.io/Aulas/" target="_blank">Matemática</a>
+            <a class="botao_redirecionador space-mono-regular" href="https://github.com/LordFabinho" target="_blank">Git Hub</a>
+            <a class="botao_redirecionador space-mono-regular" href="https://www.instagram.com/donruancursos/" target="_blank">Don Ruan</a>
         </div>
     </div>
+
+    <div class="containerFotos">
+        <button id="botaoEsquerda"><img src="img/SetaEsquerda.png" class="botao"></button>
+        <div class="scroll-container">
+            <div class="scroll-content" id="scrollContent">
+                <!-- As imagens serão inseridas aqui pelo JavaScript -->
+            </div>
+        </div>
+        <button id="botaoDireita"><img src="img/SetaDireita.png" class="botao"></button>
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
