--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
         <div class="conjunto_botoes">
             <a class="botao_redirecionador space-mono-regular" href="https://fabinhofarias.github.io/Aulas/" target="_blank">Matemática</a>
-            <a class="botao_redirecionador space-mono-regular" href="https://github.com/LordFabinho" target="_blank">Git Hub</a>
+            <a class="botao_redirecionador space-mono-regular" href="https://github.com/FabinhoFarias" target="_blank">Git Hub</a>
             <a class="botao_redirecionador space-mono-regular" href="https://www.instagram.com/donruancursos/" target="_blank">Don Ruan</a>
         </div>
     </div>
